objects/Payment__x.object
<CustomObject>
    <fields>
        <fullName>PAYEEID__c</fullName>
        <description>PAYEEID</description>
        <externalDeveloperName>PAYEEID</externalDeveloperName>
        <label>Payee ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENTAMOUNT__c</fullName>
        <description>PAYMENTAMOUNT</description>
        <externalDeveloperName>PAYMENTAMOUNT</externalDeveloperName>
        <label>Payment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PERIOD__c</fullName>
        <description>PERIOD</description>
        <externalDeveloperName>PERIOD</externalDeveloperName>
        <label>Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitType__c</fullName>
        <description>UnitType</description>
        <externalDeveloperName>UnitType</externalDeveloperName>
        <label>Unit Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>